wip: ltng-queue
